fix: word breaks in editor content

--- a/src/design/scss/editor.scss
+++ b/src/design/scss/editor.scss
@@ -93,7 +93,7 @@
         color: $primary-dark !important;
         cursor: pointer;
         text-decoration: none;
-        word-break: break-all;
+        overflow-wrap: break-word;
 
         &:hover {
             color: $gray-3;
